--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ditdot-dev/vue-flow-form": "^2.2.1",
     "mapbox-gl": "^2.7.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@cloudflare/wrangler": "^1.19.11",
+    "@types/mapbox-gl": "^2.6.3",
     "@vitejs/plugin-vue": "^2.2.0",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
