--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ditdot-dev/vue-flow-form": "^2.2.1",
+    "geo-coordinates-parser": "^1.4.4",
     "mapbox-gl": "^2.7.1",
     "vue": "^3.2.25"
   },
