--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ditdot-dev/vue-flow-form": "^2.2.1",
     "@googlemaps/js-api-loader": "^1.14.0",
+    "date-fns": "^2.28.0",
     "geo-coordinates-parser": "^1.4.4",
     "mapbox-gl": "^2.7.1",
     "vue": "^3.2.25"
