--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3005",
     "build-ts": "vue-tsc --noEmit && vite build",
     "build": "vite build",
     "preview": "vite preview",
