--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "1.16.10",
+    "@types/fabric": "^5.3.10",
     "date-fns": "^2.29.3",
+    "fabric": "^6.7.1",
     "geo-coordinates-parser": "^1.7.3",
     "html2canvas": "^1.4.1",
     "vue": "^3.2.47"
